# godoco

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
godoco/: __init__.py  __main__.py
godoco/cli/: __init__.py  app.py  commands.py
godoco/config/: manager.py  models.py
godoco/godot_wrapper/: __init__.py  detector.py  project.py  wrapper.py
godoco/ui/: banners.py  console.py  prompts.py  tables.py
godoco/utils/: errors.py  paths.py  validators.py
