[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"

[project]
    name = "godoco"
    version = "0.0.1"
    requires-python = ">=3.12"
    dependencies = [
        "typer>=0.20.0",
        "watchdog>=6.0.0",
        "rich>=13.7.0",
        "questionary>=2.0.0",
        "pydantic>=2.5.0",
    ]
    license = {text = "GPL-3.0-or-later"}

    [project.scripts]
        godoco = "godoco.__main__:main"
